--- a/roles/configure_rke/defaults/main.yml
+++ b/roles/configure_rke/defaults/main.yml
@@ -1,25 +1,46 @@
-# @var rke_user: rke
-# User that will be used to connect on nodes during the installation proccess.
-rke_user: vagrant
-network_interface: eth0
-rke_kubernetes_version: v1.19.3-rancher1-1
-rke_version: v1.2.1
+# RKE user
+rke_user: rke
+
+# Cluster Name
+rke_cluster_name: Cluster_Rke_Dev
+
+# Kubernetes Versions
+kubernetes_supported_versions:
+  "1.24": v1.24.4-rancher1-1
+  "1.23": v1.23.10-rancher1-1
+  "1.22": v1.22.13-rancher1-1
+  "1.21": v1.21.14-rancher1-1
+  "1.20": v1.20.15-rancher2-2
+  "1.25": v1.25.9-rancher2-1
+
+kubernetes_version: "1.25"
+
+rke_kubernetes_version: "{{ kubernetes_supported_versions[kubernetes_version] }}"
+rke_version: v1.4.5
 rke_binary_url: "https://github.com/rancher/rke/releases/download/{{ rke_version }}/rke_linux-amd64"
-# @var rke_node: "{{ groups['masters'] | first }}"
-# Node that will be used to deploy cluster using RKE.
+
+# Network
+rke_addon_job_timeout: 60
+rke_cluster_network_cidr: 10.42.0.0/16
+rke_service_network_cidr: 10.43.0.0/16
+
+# Plugin Network Config
+cluster_interface: "{{ ansible_default_ipv4.interface }}"
+rke_network_config:
+  plugin: canal
+  options:
+    canal_iface: "{{ cluster_interface }}"
+
+# Nodes configs
 rke_node: "{{ groups['masters'] | first }}"
 rke_ignore_docker_version: true
-rke_addon_job_timeout: 60
-# @var rke_cluster_network_cidr: '10.42.0.0/16'
-# CIDR pool used to assign IP addresses to pods in the cluster.
-rke_cluster_network_cidr: 10.42.0.0/16
-# @var rke_service_network_cidr: '10.43.0.0/16'
-# This is the virtual IP address that will be assigned to services created on Kubernetes.
-rke_service_network_cidr: 10.43.0.0/16
+
 rke_node_groups:
   - name: masters
     role:
       - controlplane
+      - etcd
   - name: workers
     role:
       - worker
+  
