feat(rke):  user rke

--- a/roles/configure_hosts/tasks/main.yml
+++ b/roles/configure_hosts/tasks/main.yml
@@ -74,12 +74,17 @@
     name: "{{ item }}"
   with_items:
     - docker
+    - rke
 
-- name: Add docker group to users {{ ansible_user }} groups
+- name: Criar usuario rke
   user:
-    name: "{{ ansible_user }}"
-    append: true
-    groups: docker
+    name: rke
+    comment: Usuario padrão rancher
+    shell: /bin/bash
+    groups:
+      - docker
+      - rke
+    create_home: yes
 
 - name: Adicionar chaves públicas para root
   authorized_key:
@@ -88,6 +93,7 @@
     key: "{{ item }}"
   with_file:
     - keys/vagrant.pub
+    - keys/rancher.pub
 
 - name: Adicionar chaves públicas para vagrant
   authorized_key:
@@ -96,12 +102,28 @@
     key: "{{ item }}"
   with_file:
     - keys/vagrant.pub
+    - keys/rancher.pub
+
+- name: Adicionar chaves públicas para rke
+  authorized_key:
+    user: rke
+    state: present
+    key: "{{ item }}"
+  with_file:
+    - keys/rancher.pub
+    - keys/vagrant.pub
 
 - name: Modificar /etc/sudoers
   lineinfile:
     path: /etc/sudoers
     line: 'vagrant ALL=(ALL:ALL) NOPASSWD: ALL'
     insertbefore: BOF
+
+- name: Add docker group to users {{ ansible_user }} groups
+  user:
+    name: "{{ ansible_user }}"
+    append: true
+    groups: docker
 
 
 # ---------------------------------------------------
