--- a/inventory/cluster-rke-dev/virtualbox.yaml
+++ b/inventory/cluster-rke-dev/virtualbox.yaml
@@ -1,7 +1,7 @@
 ---
 all:
   vars:
-    ambiente: virtualbox
+    ambiente: dev
     ansible_python_interpreter: /usr/bin/python3
     ansible_ssh_private_key_file: keys/rancher
 
